prevent useless scrollbar

--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -74,7 +74,6 @@ textarea {
 }
 
 #div_mainContainer,
-#div_pageContainer,
 #div_resumePluginList,
 #div_resumeObjectList {
   width: 100% !important;
@@ -3317,11 +3316,11 @@ ul.dropdown-menu {
   :root {
     --lineheight: 1.4em;
   }
-
+  
   body {
     font-size: 14px !important;
   }
-
+  
   [data-page="administration"] ul.nav-tabs.nav-primary li i:after {
     content:'';
     position:absolute;
@@ -3330,7 +3329,7 @@ ul.dropdown-menu {
     left:-4px;
     right:-4px;
   }
-
+  
   [data-page="administration"] ul.nav-tabs.nav-primary li a > span {
     display: none;
   }
@@ -3339,12 +3338,12 @@ ul.dropdown-menu {
     max-width: 60px;
     text-align: center;
   }
-
+  
   .btn,
   tbody > tr > td{
     font-size: 12px !important;
   }
-
+  
   .expression .col-xs-1 {
     width: 6.5em !important;
   }
@@ -3352,11 +3351,11 @@ ul.dropdown-menu {
     width: 55% !important;
     align-content: right !important;
   }
-
+  
   #div_editScenario ul.nav.nav-tabs {
     margin-top: 30px !important;
   }
-
+  
   .form-control,
   .btn,
   .label {
@@ -3402,5 +3401,5 @@ ul.dropdown-menu {
   .hidden-xs {
     display: none !important;
   }
-
+  
 }
